Comentarios Javadoc y corrección de algunos códigos, faltan varios commits mas